sending requests to main backend